--- a/app/globals.css
+++ b/app/globals.css
@@ -6,10 +6,24 @@
   --background: #ffffff;
   --foreground: #ffffff;
 }
+.timeline {
+  position: relative;
+}
 
-@media (prefers-color-scheme: dark) {
+.timeline-item {
+  opacity: 0; /* Initially hidden */
+  transform: translateY(20px); /* Start slightly below */
+  transition: opacity 0.5s ease, transform 0.5s ease; /* Animation effects */
+}
+
+.timeline-item.visible {
+  opacity: 1; /* Fade in */
+  transform: translateY(0); /* Slide up */
+}
+
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #ffffff;
     --foreground: #ededed;
   }
-}
+} */
