--- a/app/components/IndonesiaEmas/Timeline.module.css
+++ b/app/components/IndonesiaEmas/Timeline.module.css
@@ -66,7 +66,7 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  padding-right: 40px ;
+  padding-right: 60px ;
   position: relative;
   margin-bottom: 60px;
   width: 1600;
@@ -79,8 +79,8 @@
   content: "";
   position: absolute;
   top: 50%;
-  left: 0;
-  right: 55;
+  left: 10;
+  right: 20;
   height: 5px;
   background-color: rgb(3, 249, 192);
   z-index: 1;
@@ -141,13 +141,13 @@
   opacity: 1; /* Become visible */
 }
 
-.buttonContainerRight {
+.buttonContainer {
   position: absolute; /* Position relative to the nearest positioned ancestor */
   top: 620px;         /* Adjust as needed */
   right: 40px;       /* Adjust as needed */
 }
 
-.navigationButtonRight {
+.navigationButton {
   background-color: #05e265; /* Button color */
   color: white;              /* Text color */
   border: none;              /* No border */
@@ -156,21 +156,7 @@
   cursor: pointer;           /* Pointer cursor */
   font-size: 12px;          /* Font size */
 }
-.buttonContainerLeft {
-  position: absolute; /* Position relative to the nearest positioned ancestor */
-  top: 620px;         /* Adjust as needed */
-  left: 40px;       /* Adjust as needed */
-}
 
-.navigationButtonLeft {
-  background-color: #05e265; /* Button color */
-  color: white;              /* Text color */
-  border: none;              /* No border */
-  padding: 10px 30px;       /* Padding */
-  border-radius: 20px;       /* Rounded corners */
-  cursor: pointer;           /* Pointer cursor */
-  font-size: 12px;          /* Font size */
-}
 
 .navigationButton:hover {
   background-color: #057ff9; /* Darker blue on hover */
