--- a/app/components/Pra-Kemerdekaan/Timeline.module.css
+++ b/app/components/Pra-Kemerdekaan/Timeline.module.css
@@ -21,7 +21,7 @@
 
 /* Gambar di sebelah kiri */
 .image {
-  width: 30%; /* Gambar mengambil 30% layar */
+  width: auto; /* Gambar mengambil 30% layar */
   height: auto;
   object-fit: cover; /* Menjaga proporsi gambar */
   border-radius: 10px; /* Opsional: Untuk sudut yang melengkung */
@@ -76,8 +76,8 @@
   content: "";
   position: absolute;
   top: 50%;
-  left: 0;
-  right: 0;
+  left: 50;
+  right: 100;
   height: 5px;
   background-color: rgb(3, 249, 192);
   z-index: 1;
