--- a/app/components/Pra-Kemerdekaan/Timeline.module.css
+++ b/app/components/Pra-Kemerdekaan/Timeline.module.css
@@ -68,7 +68,7 @@
   padding-right: 40px;
   position: relative;
   margin-bottom: 60px;
-  width: 100%; /* Ganti menjadi 100% untuk responsivitas */
+  width: 100%; 
 }
 
 /* Garis timeline melintang di tengah */
@@ -79,7 +79,7 @@
   left: 50;
   right: 100;
   height: 5px;
-  background-color: rgb(4, 4, 4);
+  background-color: rgb(0, 239, 140);
   z-index: 1;
 }
 
@@ -138,9 +138,9 @@
 }
 
 .buttonContainer {
-  position: absolute; /* Position relative to the nearest positioned ancestor */
-  top: 620px;         /* Adjust as needed */
-  right: 40px;       /* Adjust as needed */
+  position: absolute; 
+  top: 620px;         
+  right: 40px;       
 }
 
 .navigationButton {
@@ -188,7 +188,7 @@
   }
 
   .buttonContainer {
-    top: auto; /* Menghilangkan posisi absolut untuk tombol */
+    top: 620px; /* Menghilangkan posisi absolut untuk tombol */
     margin-top: 20px; /* Menambahkan margin */
   }
 }
