--- a/app/components/Pra-Kemerdekaan/Timeline.module.css
+++ b/app/components/Pra-Kemerdekaan/Timeline.module.css
@@ -79,7 +79,7 @@
   left: 50;
   right: 100;
   height: 5px;
-  background-color: rgb(4, 4, 4);
+  background-color: #05e265; 
   z-index: 1;
 }
 
@@ -139,7 +139,7 @@
 
 .buttonContainer {
   position: absolute; /* Position relative to the nearest positioned ancestor */
-  top: 620px;         /* Adjust as needed */
+  top: 63%;         /* Adjust as needed */
   right: 40px;       /* Adjust as needed */
 }
 
