--- a/app/components/Pencapaian/Timeline.module.css
+++ b/app/components/Pencapaian/Timeline.module.css
@@ -106,6 +106,8 @@
 }
 
 .popupContent {
+  width: 500px; /* Sesuaikan lebar gambar sesuai dengan konten pop-up */
+  height: 300px;
   background: white;
   border-radius: 12px;
   padding: 30px;
@@ -162,8 +164,8 @@
 /* Tambahkan ini di Timeline.module.css */
 
 .popupImage {
-  width: 40%; /* Sesuaikan lebar gambar sesuai dengan konten pop-up */
-  height: auto; /* Mempertahankan proporsi gambar */
+  width: 210px; /* Sesuaikan lebar gambar sesuai dengan konten pop-up */
+  height: 233px; /* Mempertahankan proporsi gambar */
   border-radius: 8px; /* Membuat sudut gambar lebih lembut */
   margin-top: 15px; /* Ruang antara judul dan gambar */
 }
@@ -173,3 +175,9 @@
   max-height: 300px; /* Limit height */
 }
 
+.description{
+  padding-top: 10%; /* Sesuaikan lebar gambar sesuai dengan konten pop-up */
+  padding-bottom: 23%; /* Mempertahankan proporsi gambar */
+  border-radius: 8px; /* Membuat sudut gambar lebih lembut */
+  margin-top: 15px; 
+}
