--- a/app/components/Pencapaian/Timeline.module.css
+++ b/app/components/Pencapaian/Timeline.module.css
@@ -16,7 +16,7 @@
 
 .styledButton {
   display: inline-block; /* Makes the button wrap tightly around its content */
-  padding: 10px 20px; /* Adjust padding for top-bottom and left-right */
+  padding: 100px 30px; /* Adjust padding for top-bottom and left-right */
   font-size: 2em; /* Matches the font size of the title */
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; /* Ganti font */
   background-color: #007bff; /* Button background color */
@@ -24,7 +24,7 @@
   border: none; /* No border */
   border-radius: 500px; /* Match rounded corners with title */
   cursor: pointer; /* Pointer cursor on hover */
-  margin: 400px 0 50px 50; /* Add top margin (40px) for spacing */
+  margin: 380px 0 50px 50; /* Add top margin (40px) for spacing */
   text-align: center; /* Center align text */
   transition: background-color 0.3s ease; /* Smooth background transition */
 }
@@ -47,7 +47,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 20px; /* Jarak antar kartu */
+  gap: 20%; /* Jarak antar kartu */
   flex-wrap: wrap;
   position: absolute;
   top: 40%;
@@ -55,7 +55,6 @@
   width: 100%;
   height: 100%;
 }
-
 
 .card {
   position: absolute; /* Membuat kartu berada dalam posisi absolut */
@@ -210,8 +209,6 @@
   background-color: rgba(0, 0, 0, 0.8);
 }
 
-
-
 .close {
   position: absolute;
   top: 10px;
@@ -269,13 +266,3 @@
     opacity: 1;
   }
 }
-/* Tambahkan ini di Timeline.module.css */
-
-/* .popupImage {
-  /* Pastikan gambar tidak melebihi ukuran konten */
-  /* max-width: 100%; */
-  /* max-height: 400px; */
-  /* object-fit: contain; */
-  /* margin-top: 10px; */
-/* }  */
-
