--- a/app/components/Pencapaian/Timeline.module.css
+++ b/app/components/Pencapaian/Timeline.module.css
@@ -140,13 +140,26 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(0.7);
   width: 70%;
-  max-width: 1000px;
+  max-width: 700px;
   background: white;
   border-radius: 10px;
   overflow: hidden;
   z-index: 1000;
+  opacity: 0;
+  animation: boxOpen 0.4s forwards;
+}
+
+@keyframes boxOpen {
+  from {
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.7);
+  }
+  to {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
 }
 /* .popup {
   position: fixed;
@@ -262,7 +275,7 @@
   padding-top: 0px;
   padding-left: 15px;
   padding-bottom: 50px;
-  max-height: 500px; /* Set max height to trigger scrolling */
+  max-height: 300px; /* Set max height to trigger scrolling */
   overflow-y: auto; /* Enable vertical scrolling */
   overflow-x: hidden; /* Disable horizontal scrolling */
   padding-right: 15px; /* Space for scrollbar */
@@ -274,7 +287,7 @@
   font-size: 2rem; /* Font size for the title */
   margin-bottom: 10px; /* Space between title and description */
   text-align: center; 
-  padding-top: 10px;
+  padding-top: 5px;
 }
 
 
